criação dos arquivos de layout.

--- a/src/login.html
+++ b/src/login.html
@@ -5,11 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Controle de estoque</title>
+
+    <!-- estilização -->
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
-<body>
+<body class="bg-my-dark-light">
+    <div id="loginScreen">
+        <div class="container">
+            <div class="row vh-100 align-items-center justify-content-center">
+                <div class="col-6 col-lg-4">
+                    <div class="card shadow-lg">
+                        <div class="card-body">
+                            <h3 class="text-my-purple">
+                                <img src="img/lightning.svg" width="" height="28px" alt="Logotipo"> Controle de estoque
+                            </h3>
+                            <p class="text-secondary my-3">Um exemplo bem simples de como usar uma API com Javascript</p>
+                            <hr>
+                            <form id="formLogin">
+                                <div class="form-group">
+                                    <label for="inputNome">Antes de começar escreva seu nome</label>
+                                    <input type="text" class="form-control" id="inputNome" aria-describedby="ajudaNome" placeholder="Seu nome...">
+                                    <small id="ajudaNome" class="form-text text-muted">Você não pode deixar este campo em branco</small>
+                                </div>
+                                <button type="submit" id="btnLogin" class="btn btn-my-green">Começar</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!-- scripts -->
+    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+    <script src="js/jquery.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script type="module" src="js/login.js"></script>
 </body>
 
 </html>
