--- a/src/painel.html
+++ b/src/painel.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-my-purple">
         <a class="navbar-brand" href="#">
-            <img src="assets/lightning.svg" width="" height="28px" alt="Logotipo"> Controle de estoque simples</a>
+            <img src="img/lightning.svg" width="" height="28px" alt="Logotipo"> Controle de estoque simples</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
